// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePassword renders as expected 1`] = `
<div>
  <form
    class="amplify-accountsettings-changepassword"
  >
    <div
      class="amplify-flex"
      style="flex-direction: column;"
    >
      <div
        class="amplify-flex amplify-field amplify-textfield amplify-passwordfield"
      >
        <label
          class="amplify-label"
          for="amplify-id-0"
        >
          Current Password
        </label>
        <div
          class="amplify-flex amplify-field-group amplify-field-group--horizontal"
          data-orientation="horizontal"
        >
          <div
            class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
            data-orientation="horizontal"
          >
            <input
              aria-invalid="false"
              autocomplete="current-password"
              class="amplify-input amplify-field-group__control"
              id="amplify-id-0"
              name="currentPassword"
              required=""
              type="password"
            />
          </div>
          <div
            class="amplify-field-group__outer-end"
          >
            <button
              aria-checked="false"
              aria-label="Show password"
              class="amplify-button amplify-field-group__control amplify-field__show-password"
              data-fullwidth="false"
              role="switch"
              type="button"
            >
              <span
                aria-live="polite"
                class="amplify-visually-hidden"
              >
                Password is hidden
              </span>
              <span
                class="amplify-icon"
                style="width: 1em; height: 1em;"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6C15.79 6 19.17 8.13 20.82 11.5C19.17 14.87 15.79 17 12 17C8.21 17 4.83 14.87 3.18 11.5C4.83 8.13 8.21 6 12 6ZM12 4C7 4 2.73 7.11 1 11.5C2.73 15.89 7 19 12 19C17 19 21.27 15.89 23 11.5C21.27 7.11 17 4 12 4ZM12 9C13.38 9 14.5 10.12 14.5 11.5C14.5 12.88 13.38 14 12 14C10.62 14 9.5 12.88 9.5 11.5C9.5 10.12 10.62 9 12 9ZM12 7C9.52 7 7.5 9.02 7.5 11.5C7.5 13.98 9.52 16 12 16C14.48 16 16.5 13.98 16.5 11.5C16.5 9.02 14.48 7 12 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="amplify-flex amplify-field amplify-textfield amplify-passwordfield"
      >
        <label
          class="amplify-label"
          for="amplify-id-1"
        >
          New Password
        </label>
        <div
          class="amplify-flex amplify-field-group amplify-field-group--horizontal"
          data-orientation="horizontal"
        >
          <div
            class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
            data-orientation="horizontal"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="amplify-input amplify-field-group__control"
              id="amplify-id-1"
              name="newPassword"
              required=""
              type="password"
            />
          </div>
          <div
            class="amplify-field-group__outer-end"
          >
            <button
              aria-checked="false"
              aria-label="Show password"
              class="amplify-button amplify-field-group__control amplify-field__show-password"
              data-fullwidth="false"
              role="switch"
              type="button"
            >
              <span
                aria-live="polite"
                class="amplify-visually-hidden"
              >
                Password is hidden
              </span>
              <span
                class="amplify-icon"
                style="width: 1em; height: 1em;"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6C15.79 6 19.17 8.13 20.82 11.5C19.17 14.87 15.79 17 12 17C8.21 17 4.83 14.87 3.18 11.5C4.83 8.13 8.21 6 12 6ZM12 4C7 4 2.73 7.11 1 11.5C2.73 15.89 7 19 12 19C17 19 21.27 15.89 23 11.5C21.27 7.11 17 4 12 4ZM12 9C13.38 9 14.5 10.12 14.5 11.5C14.5 12.88 13.38 14 12 14C10.62 14 9.5 12.88 9.5 11.5C9.5 10.12 10.62 9 12 9ZM12 7C9.52 7 7.5 9.02 7.5 11.5C7.5 13.98 9.52 16 12 16C14.48 16 16.5 13.98 16.5 11.5C16.5 9.02 14.48 7 12 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="amplify-flex amplify-field amplify-textfield amplify-passwordfield"
      >
        <label
          class="amplify-label"
          for="amplify-id-2"
        >
          Confirm Password
        </label>
        <div
          class="amplify-flex amplify-field-group amplify-field-group--horizontal"
          data-orientation="horizontal"
        >
          <div
            class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
            data-orientation="horizontal"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="amplify-input amplify-field-group__control"
              id="amplify-id-2"
              name="confirmPassword"
              required=""
              type="password"
            />
          </div>
          <div
            class="amplify-field-group__outer-end"
          >
            <button
              aria-checked="false"
              aria-label="Show password"
              class="amplify-button amplify-field-group__control amplify-field__show-password"
              data-fullwidth="false"
              role="switch"
              type="button"
            >
              <span
                aria-live="polite"
                class="amplify-visually-hidden"
              >
                Password is hidden
              </span>
              <span
                class="amplify-icon"
                style="width: 1em; height: 1em;"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6C15.79 6 19.17 8.13 20.82 11.5C19.17 14.87 15.79 17 12 17C8.21 17 4.83 14.87 3.18 11.5C4.83 8.13 8.21 6 12 6ZM12 4C7 4 2.73 7.11 1 11.5C2.73 15.89 7 19 12 19C17 19 21.27 15.89 23 11.5C21.27 7.11 17 4 12 4ZM12 9C13.38 9 14.5 10.12 14.5 11.5C14.5 12.88 13.38 14 12 14C10.62 14 9.5 12.88 9.5 11.5C9.5 10.12 10.62 9 12 9ZM12 7C9.52 7 7.5 9.02 7.5 11.5C7.5 13.98 9.52 16 12 16C14.48 16 16.5 13.98 16.5 11.5C16.5 9.02 14.48 7 12 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        class="amplify-button amplify-field-group__control amplify-button--disabled"
        data-fullwidth="false"
        disabled=""
        type="submit"
      >
        Update password
      </button>
    </div>
  </form>
</div>
`;

exports[`ChangePassword renders as expected with component overrides 1`] = `
<div>
  <form
    class="amplify-accountsettings-changepassword"
  >
    <div
      class="amplify-flex"
      style="flex-direction: column;"
    >
      <div
        class="amplify-flex amplify-field amplify-textfield amplify-passwordfield"
      >
        <label
          class="amplify-label"
          for="amplify-id-60"
        >
          Custom Current Password
        </label>
        <div
          class="amplify-flex amplify-field-group amplify-field-group--horizontal"
          data-orientation="horizontal"
        >
          <div
            class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
            data-orientation="horizontal"
          >
            <input
              aria-invalid="false"
              autocomplete="current-password"
              class="amplify-input amplify-field-group__control"
              id="amplify-id-60"
              name="currentPassword"
              required=""
              type="password"
            />
          </div>
          <div
            class="amplify-field-group__outer-end"
          >
            <button
              aria-checked="false"
              aria-label="Show password"
              class="amplify-button amplify-field-group__control amplify-field__show-password"
              data-fullwidth="false"
              role="switch"
              type="button"
            >
              <span
                aria-live="polite"
                class="amplify-visually-hidden"
              >
                Password is hidden
              </span>
              <span
                class="amplify-icon"
                style="width: 1em; height: 1em;"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6C15.79 6 19.17 8.13 20.82 11.5C19.17 14.87 15.79 17 12 17C8.21 17 4.83 14.87 3.18 11.5C4.83 8.13 8.21 6 12 6ZM12 4C7 4 2.73 7.11 1 11.5C2.73 15.89 7 19 12 19C17 19 21.27 15.89 23 11.5C21.27 7.11 17 4 12 4ZM12 9C13.38 9 14.5 10.12 14.5 11.5C14.5 12.88 13.38 14 12 14C10.62 14 9.5 12.88 9.5 11.5C9.5 10.12 10.62 9 12 9ZM12 7C9.52 7 7.5 9.02 7.5 11.5C7.5 13.98 9.52 16 12 16C14.48 16 16.5 13.98 16.5 11.5C16.5 9.02 14.48 7 12 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="amplify-flex amplify-field amplify-textfield amplify-passwordfield"
      >
        <label
          class="amplify-label"
          for="amplify-id-61"
        >
          Custom New Password
        </label>
        <div
          class="amplify-flex amplify-field-group amplify-field-group--horizontal"
          data-orientation="horizontal"
        >
          <div
            class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
            data-orientation="horizontal"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="amplify-input amplify-field-group__control"
              id="amplify-id-61"
              name="newPassword"
              required=""
              type="password"
            />
          </div>
          <div
            class="amplify-field-group__outer-end"
          >
            <button
              aria-checked="false"
              aria-label="Show password"
              class="amplify-button amplify-field-group__control amplify-field__show-password"
              data-fullwidth="false"
              role="switch"
              type="button"
            >
              <span
                aria-live="polite"
                class="amplify-visually-hidden"
              >
                Password is hidden
              </span>
              <span
                class="amplify-icon"
                style="width: 1em; height: 1em;"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6C15.79 6 19.17 8.13 20.82 11.5C19.17 14.87 15.79 17 12 17C8.21 17 4.83 14.87 3.18 11.5C4.83 8.13 8.21 6 12 6ZM12 4C7 4 2.73 7.11 1 11.5C2.73 15.89 7 19 12 19C17 19 21.27 15.89 23 11.5C21.27 7.11 17 4 12 4ZM12 9C13.38 9 14.5 10.12 14.5 11.5C14.5 12.88 13.38 14 12 14C10.62 14 9.5 12.88 9.5 11.5C9.5 10.12 10.62 9 12 9ZM12 7C9.52 7 7.5 9.02 7.5 11.5C7.5 13.98 9.52 16 12 16C14.48 16 16.5 13.98 16.5 11.5C16.5 9.02 14.48 7 12 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="amplify-flex amplify-field amplify-textfield amplify-passwordfield"
      >
        <label
          class="amplify-label"
          for="amplify-id-62"
        >
          Custom Confirm Password
        </label>
        <div
          class="amplify-flex amplify-field-group amplify-field-group--horizontal"
          data-orientation="horizontal"
        >
          <div
            class="amplify-field-group__field-wrapper amplify-field-group__field-wrapper--horizontal"
            data-orientation="horizontal"
          >
            <input
              aria-invalid="false"
              autocomplete="new-password"
              class="amplify-input amplify-field-group__control"
              id="amplify-id-62"
              name="confirmPassword"
              required=""
              type="password"
            />
          </div>
          <div
            class="amplify-field-group__outer-end"
          >
            <button
              aria-checked="false"
              aria-label="Show password"
              class="amplify-button amplify-field-group__control amplify-field__show-password"
              data-fullwidth="false"
              role="switch"
              type="button"
            >
              <span
                aria-live="polite"
                class="amplify-visually-hidden"
              >
                Password is hidden
              </span>
              <span
                class="amplify-icon"
                style="width: 1em; height: 1em;"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 6C15.79 6 19.17 8.13 20.82 11.5C19.17 14.87 15.79 17 12 17C8.21 17 4.83 14.87 3.18 11.5C4.83 8.13 8.21 6 12 6ZM12 4C7 4 2.73 7.11 1 11.5C2.73 15.89 7 19 12 19C17 19 21.27 15.89 23 11.5C21.27 7.11 17 4 12 4ZM12 9C13.38 9 14.5 10.12 14.5 11.5C14.5 12.88 13.38 14 12 14C10.62 14 9.5 12.88 9.5 11.5C9.5 10.12 10.62 9 12 9ZM12 7C9.52 7 7.5 9.02 7.5 11.5C7.5 13.98 9.52 16 12 16C14.48 16 16.5 13.98 16.5 11.5C16.5 9.02 14.48 7 12 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        class="amplify-button amplify-field-group__control amplify-button--disabled"
        data-fullwidth="false"
        disabled=""
        type="submit"
      >
        Custom Submit Button
      </button>
    </div>
  </form>
</div>
`;
